syntax = "proto3";

package neon_server_example;

option csharp_namespace = "Neon.ServerExample.Proto";

message RoomStateProto {
  int64 timestamp = 1;
  repeated PlayerStateProto players = 2;
}

message PlayerStateProto {
  int32 id = 1;
  float x = 2;
  float y = 3;
}